# uefi-rs

./: .editorconfig  .envrc  .gitignore  .gitmodules  .travis.yml  .typos.toml  404.html  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PUBLISHING.md  README.md  build.py  flake.nix  index.html  output.txt  print.html  reference.html  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  shell.nix  x86_64-uefi.json
tests/: .gitignore  Cargo.toml  build.py  x86_64-uefi.json
tests/src/: boot.rs  debug.rs  lib.rs  main.rs  no_std.rs  proto.rs  ucs2.rs
uefi/: CHANGELOG.md  Cargo.toml  README.md
uefi-alloc/: Cargo.toml
uefi-alloc/src/: lib.rs
uefi-hello-world-aarch64/: .gitignore  Cargo.toml  README.md  build.py
uefi-hello-world-aarch64/.cargo/: aarch64-unknown-uefi.json
uefi-hello-world-aarch64/src/: main.rs
uefi-macros/: CHANGELOG.md  Cargo.toml  README.md
uefi-macros/src/: lib.rs
uefi-macros/tests/: cargo_wrapper  compilation.rs
uefi-macros/tests/ui/: entry.rs  entry.stderr  entry_bad_abi.rs  entry_bad_abi.stderr  entry_bad_arg.rs  entry_bad_arg.stderr  entry_bad_async.rs  entry_bad_async.stderr  entry_bad_attr_arg.rs  entry_bad_attr_arg.stderr  entry_bad_const.rs  entry_bad_const.stderr  entry_bad_generic.rs  entry_bad_generic.stderr  entry_bad_return_type.rs  entry_bad_return_type.stderr  entry_unnamed_image_arg.rs  entry_unnamed_image_arg.stderr  entry_unnamed_table_arg.rs  entry_unnamed_table_arg.stderr  guid.rs  guid.stderr  guid_bad_hex_group2.rs  guid_bad_hex_group2.stderr  guid_bad_hex_group5.rs  guid_bad_hex_group5.stderr  guid_bad_length.rs  guid_bad_length.stderr
uefi-macros/tests/ui/fail/: entry_bad_abi.rs  entry_bad_abi.stderr  entry_bad_arg.rs  entry_bad_arg.stderr  entry_bad_async.rs  entry_bad_async.stderr  entry_bad_attr_arg.rs  entry_bad_attr_arg.stderr  entry_bad_const.rs  entry_bad_const.stderr  entry_bad_generic.rs  entry_bad_generic.stderr  entry_bad_return_type.rs  entry_bad_return_type.stderr  entry_unnamed_image_arg.stderr  entry_unnamed_table_arg.stderr
uefi-macros/tests/ui/pass/: entry.rs  entry_docstring.rs  entry_unsafe.rs
uefi-raw/: CHANGELOG.md  Cargo.toml  README.md  api_guidelines.md
uefi-raw/src/: capsule.rs  enums.rs  firmware_storage.rs  lib.rs  net.rs  status.rs  time.rs
uefi-raw/src/protocol/: acpi.rs  ata.rs  block.rs  console.rs  device_path.rs  dhcp4.rs  disk.rs  driver.rs  file_system.rs  firmware_management.rs  firmware_volume.rs  http.rs  iommu.rs  ip4_config2.rs  loaded_image.rs  media.rs  memory_protection.rs  misc.rs  mod.rs  nvme.rs  rng.rs  scsi.rs  shell.rs  shell_params.rs  string.rs  tcg.rs  tls_config.rs
uefi-raw/src/protocol/console/: serial.rs
uefi-raw/src/protocol/device_path/: device_path_gen.rs
uefi-raw/src/protocol/hii/: config.rs  database.rs  font.rs  form_browser.rs  image.rs  mod.rs  popup.rs  string.rs
uefi-raw/src/protocol/network/: dhcp4.rs  http.rs  ip4.rs  ip4_config2.rs  mod.rs  pxe.rs  snp.rs  tcp4.rs  tcpv4.rs  tls.rs
uefi-raw/src/protocol/pci/: mod.rs  resource.rs  root_bridge.rs
uefi-raw/src/protocol/tcg/: enums.rs  v1.rs  v2.rs
uefi-raw/src/protocol/usb/: host_controller.rs  io.rs  mod.rs
uefi-raw/src/table/: boot.rs  configuration.rs  header.rs  mod.rs  revision.rs  runtime.rs  system.rs
uefi-services/: CHANGELOG.md  Cargo.toml  README.md  build.rs
uefi-services/src/: lib.rs
uefi-std-example/: Cargo.toml  README.md
uefi-std-example/src/: main.rs
uefi-sys/: Cargo.toml  build.rs
uefi-sys/src/: data_types.rs  guid.rs  lib.rs  memory_descriptor.rs  uefi_spec.h
uefi-test-runner/: .gitignore  Cargo.toml  README.md  aarch64-unknown-uefi.json  build.py  x86_64-uefi.json
uefi-test-runner/ci/: ovmf.sh  travis-qemu.sh
uefi-test-runner/examples/: README.md  hello_world.rs  input.rs  input_ex.rs  loaded_image.rs  rustfmt.toml  scsi.rs  shell_params.rs  sierpinski.rs  timestamp.rs
uefi-test-runner/https/: README.md
uefi-test-runner/screenshots/: gop_test.ppm
uefi-test-runner/src/: boot.rs  gop.rs  main.rs  pointer.rs  proto.rs  ucs2.rs
uefi-test-runner/src/boot/: memory.rs  misc.rs  mod.rs
uefi-test-runner/src/fs/: mod.rs
uefi-test-runner/src/proto/: block.rs  debug.rs  device_path.rs  driver.rs  iommu.rs  load.rs  loaded_image.rs  media.rs  misc.rs  mod.rs  network.rs  rng.rs  shell.rs  shell_params.rs  shim.rs  tcg.rs
uefi-test-runner/src/proto/ata/: mod.rs  pass_thru.rs
uefi-test-runner/src/proto/console/: gop.rs  mod.rs  pointer.rs  serial.rs  stdout.rs
uefi-test-runner/src/proto/media/: known_disk.rs  mod.rs
uefi-test-runner/src/proto/network/: http.rs  mod.rs  pxe.rs  snp.rs
uefi-test-runner/src/proto/nvme/: pass_thru.rs
uefi-test-runner/src/proto/pci/: mod.rs  root_bridge.rs
uefi-test-runner/src/proto/pi/: mod.rs  mp.rs
uefi-test-runner/src/proto/scsi/: pass_thru.rs
uefi-test-runner/src/proto/string/: mod.rs  unicode_collation.rs
uefi-test-runner/src/runtime/: mod.rs  vars.rs
uefi/src/: alloc.rs  allocator.rs  boot.rs  driver.rs  lib.rs  logger.rs  macros.rs  mem.rs  polyfill.rs  prelude.rs  runtime.rs  system.rs  util.rs
uefi/src/boot/: mod.rs  raw.rs
uefi/src/data_types/: chars.rs  enums.rs  guid.rs  mod.rs  opaque.rs  owned_strs.rs  strs.rs  unaligned_slice.rs
uefi/src/fs/: dir_entry_iter.rs  file_system.rs  mod.rs  normalized_path.rs  path.rs  uefi_types.rs
uefi/src/helpers/: aligned_buffer.rs  global_allocator.rs  logger.rs  mod.rs  panic_handler.rs  println.rs
uefi/src/mem/: aligned_buffer.rs  mod.rs  util.rs
uefi/src/proto/: acpi.rs  boot_policy.rs  loaded_image.rs  misc.rs  mod.rs  rng.rs  scsi.rs  shell_params.rs
uefi/src/result/: error.rs  mod.rs  status.rs
uefi/src/runtime/: mod.rs
uefi/src/table/: boot.rs  cfg.rs  header.rs  mod.rs  revision.rs  runtime.rs  system.rs
uefi/tests/: memory_map.rs
xtask/: Cargo.toml
xtask/src/: arch.rs  cargo.rs  check_raw.rs  disk.rs  main.rs  net.rs  opt.rs  pipe.rs  platform.rs  qemu.rs  release.rs  tpm.rs  util.rs
xtask/src/device_path/: README.md  field.rs  group.rs  mod.rs  node.rs  spec.rs  util.rs
(+281 files in other folders)
