[workspace]
resolver = "2"
members = [
    "template",
    "uefi",
    "uefi-macros",
    "uefi-raw",
    "uefi-std-example",
    "uefi-test-runner",
    "xtask",
]

[workspace.package]
authors = ["The Rust OSDev team"]
categories = ["embedded", "no-std", "api-bindings"]
edition = "2021"
keywords = ["uefi", "efi"]
license = "MPL-2.0"
repository = "https://github.com/rust-osdev/uefi-rs"
rust-version = "1.70"

[workspace.dependencies]
bitflags = "2.0.0"
log = { version = "0.4.5", default-features = false }
ptr_meta = { version = "0.3.0", default-features = false }
uguid = "2.1.0"

[patch.crates-io]
uefi = { path = "uefi" }
uefi-macros = { path = "uefi-macros" }
uefi-raw = { path = "uefi-raw" }

# Enable optimization for xtask itself, not for its dependencies. This speeds up
# OVMF prebuilt decompression without much increase in compilation time.
[profile.dev.package.xtask]
opt-level = 3
