[package]
name = "uefi-alloc"
version = "0.2.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
edition = "2018"
description = "Alloc crate interface for uefi-rs"
repository = "https://github.com/rust-osdev/uefi-rs"
keywords = ["uefi", "efi"]
categories = ["embedded", "no-std", "api-bindings"]
license = "MPL-2.0"

[badges]
travis-ci = { repository = "rust-osdev/uefi-rs" }
is-it-maintained-issue-resolution = { repository = "rust-osdev/uefi-rs" }
is-it-maintained-open-issues = { repository = "rust-osdev/uefi-rs" }

[dependencies]
uefi = "0.2.0"
