[package]
name = "uefi-hello-world-aarch64"
version = "0.2.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
uefi = { path = "..", features = ['exts'] }
uefi-services = { path = "../uefi-services" }
log = { version = "0.4.8", default-features = false }
no-std-compat = "0.4.0"

[features]
qemu = ["uefi-services/qemu"]
default = ["std"]
std = ["no-std-compat/alloc", "no-std-compat/compat_hash", "no-std-compat/compat_sync", "no-std-compat/compat_macros"]
