[package]
name = "uefi-hello-world-aarch64"
version = "0.0.1"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>", "Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>"]
publish = false
edition = "2018"

[dependencies]
uefi = { path = "..", features = ['exts'] }
uefi-services = { path = "../uefi-services" }
log = { version = "0.4.8", default-features = false }

[features]
qemu = ["uefi-services/qemu"]