[package]
name = "uefi-macros"
version = "0.12.0"
readme = "README.md"
description = "Procedural macros for the `uefi` crate."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = { version = "2.0.4", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.61"
uefi = { version = "0.24.0", default-features = false }
