[package]
name = "uefi-raw"
version = "0.5.0"
readme = "README.md"
description = "Raw UEFI types"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
ptr_meta.workspace = true
uguid.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
