[package]
name = "uefi-raw"
version = "0.11.0"
readme = "README.md"
description = """
Raw UEFI types and bindings for protocols, boot, and runtime services. This can
serve as base for an UEFI firmware implementation or a high-level wrapper to
access UEFI functionality from an UEFI image.
"""

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
# uefi-raw is much less likely to need the latest bleeding-edge features.
# Hence, it is okay to not use the workspace MSRV.
rust-version = "1.77"

[dependencies]
bitflags.workspace = true
uguid.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
