[package]
name = "uefi-services"
version = "0.14.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
edition = "2021"
description = "Higher-level utilities for uefi-rs"
repository = "https://github.com/rust-osdev/uefi-rs"
keywords = ["uefi", "efi"]
categories = ["embedded", "no-std", "api-bindings"]
license = "MPL-2.0"

[badges]
travis-ci = { repository = "rust-osdev/uefi-rs" }
is-it-maintained-issue-resolution = { repository = "rust-osdev/uefi-rs" }
is-it-maintained-open-issues = { repository = "rust-osdev/uefi-rs" }

[dependencies]
uefi = { version = "0.17.0", features = ["alloc", "logger"] }
log = { version = "0.4.5", default-features = false }
cfg-if = "1.0.0"
qemu-exit = { version = "3.0.1", optional = true }

[features]
default = ["panic_handler"]
# Enable QEMU-specific functionality
qemu = ["qemu-exit"]
panic_handler = []
