[package]
name = "uefi-services"
version = "0.24.0"
readme = "README.md"
description = "Deprecated. Please migrate to `uefi::helpers`."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
uefi = { version = "0.27.0", features = ["global_allocator"] }

[features]
default = ["panic_handler", "logger"]
# Enable QEMU-specific functionality
qemu = ["uefi/qemu"]
panic_handler = [ "uefi/panic_handler" ]
logger = ["uefi/logger"]
