[package]
name = "uefi-test-runner"
version = "0.2.0"
authors = ["The Rust OSDev team"]
publish = false
edition = "2021"

[dependencies]
# TODO we should let the uefi-test-runner run with and without unstable.
uefi = { path = "../uefi", features = ["alloc", "unstable"] }
uefi-services = { path = "../uefi-services" }

log = { version = "0.4.17", default-features = false }

qemu-exit = "3.0.0"

[features]
# Enable the multiprocessor test. This only works if KVM is enabled.
multi_processor = []

# Enable the PXE test.
pxe = []

# Enable the TPM v1 test.
tpm_v1 = []

# Enable the TPM v2 test.
tpm_v2 = []
