[package]
name = "uefi-test-runner"
version = "0.2.0"
authors = ["The Rust OSDev team"]
publish = false
edition = "2021"

[dependencies]
uefi = { path = "../uefi", features = ["alloc"] }
uefi-services = { path = "../uefi-services" }

log.workspace = true

qemu-exit = "3.0.0"

[features]
# Enable the debug support protocol test.
debug_support = []

# Enable the multiprocessor test. This only works if KVM is enabled.
multi_processor = []

# Enable the PXE test.
pxe = []

# Enable the `unstable` feature of the `uefi` crate.
unstable = ["uefi/unstable"]

# Enable the TPM v1 test.
tpm_v1 = []

# Enable the TPM v2 test.
tpm_v2 = []
