[package]
name = "uefi"
version = "0.28.0"
readme = "README.md"
description = "Safe and easy-to-use wrapper for building UEFI apps."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
alloc = []

# Generic gate to code that uses unstable features of Rust. You usually need a nightly toolchain.
unstable = []

# Helper features:
logger = []
global_allocator = []
panic_handler = []
qemu = ["dep:qemu-exit", "panic_handler"] # panic_handler: logical, not technical dependency

[dependencies]
bitflags.workspace = true
log.workspace = true
ptr_meta.workspace = true
uguid.workspace = true
cfg-if = "1.0.0"
ucs2 = "0.3.2"
uefi-macros = "0.13.0"
uefi-raw = "0.5.2"
qemu-exit = { version = "3.0.2", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
