[package]
name = "xtask"
version = "0.0.0"
publish = false

edition.workspace = true

[dependencies]
anyhow = "1.0.51"
clap = { version = "4.3.0", default-features = false, features = ["derive", "help", "usage", "std"] }
fatfs = { version = "0.3.6", default-features = false, features = ["alloc", "std"] }
fs-err = "2.6.0"
heck = "0.4.0"
itertools = "0.11.0"
lzma-rs = "0.3.0"
mbrman = "0.5.1"
nix = { version = "0.26.1", default-features = false, features = ["fs"] }
os_info = { version = "3.6.0", default-features = false }
proc-macro2 = { version = "1.0.46", features = ["span-locations"] }
quote = "1.0.21"
regex = "1.9.0"
serde_json = "1.0.73"
sha2 = "0.10.6"
syn = { version = "2.0.0", features = ["full"] }
tar = "0.4.38"
tempfile = "3.6.0"
walkdir = "2.3.3"
ureq = "2.7.0"
