[package]
name = "xtask"
version = "0.0.0"
publish = false

edition.workspace = true

[dependencies]
anyhow = "1.0.51"
clap = { version = "4.4.0", default-features = false, features = ["derive", "help", "usage", "std"] }
fatfs = { version = "0.3.6", default-features = false, features = ["alloc", "std"] }
fs-err = "3.0.0"
heck = "0.5.0"
itertools = "0.14.0"
log.workspace = true
mbrman = "0.5.1"
nix = { version = "0.29.0", default-features = false, features = ["fs"] }
ovmf-prebuilt = "0.2.3"
proc-macro2 = { version = "1.0.46", features = ["span-locations"] }
quote = "1.0.21"
regex = "1.10.2"
serde_json = "1.0.73"
syn = { version = "2.0.0", features = ["full"] }
tempfile = "3.6.0"
walkdir = "2.4.0"
